// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Matches the snapshot [disabled = true] 1`] = `
.c2 {
  color: #B7BBC2;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c3 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:valid,
.c3[aria-invalid='false'] {
  border-color: #60666E;
}

.c3[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c3:disabled,
.c3[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-webkit-input-placeholder,
.c3[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-moz-placeholder,
.c3[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled:-ms-input-placeholder,
.c3[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::placeholder,
.c3[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
  class="c0"
  data-testid="field-container"
>
  <label
    class="c1 c2"
    data-testid="field-label"
    for="uuid1"
    id="uuid1_label"
  >
    Telephone
  </label>
  <input
    aria-disabled="true"
    aria-invalid="false"
    aria-labelledby="uuid1_label"
    aria-required="false"
    class="c3"
    data-testid="field-input"
    disabled=""
    id="uuid1"
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    type="tel"
    value="foo"
  />
</div>
`;

exports[`TextInput Matches the snapshot [required = true] 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c3 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:valid,
.c3[aria-invalid='false'] {
  border-color: #60666E;
}

.c3[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c3:disabled,
.c3[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-webkit-input-placeholder,
.c3[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-moz-placeholder,
.c3[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled:-ms-input-placeholder,
.c3[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::placeholder,
.c3[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
  class="c0"
  data-testid="field-container"
>
  <label
    class="c1 c2"
    data-testid="field-label"
    for="uuid1"
    id="uuid1_label"
  >
    Telephone (required)
  </label>
  <input
    aria-disabled="false"
    aria-invalid="false"
    aria-labelledby="uuid1_label"
    aria-required="true"
    class="c3"
    data-testid="field-input"
    id="uuid1"
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    required=""
    type="tel"
    value="foo"
  />
</div>
`;

exports[`TextInput Matches the snapshot 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c3 {
  background: #FFFFFF;
  border: 1px solid;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:valid,
.c3[aria-invalid='false'] {
  border-color: #60666E;
}

.c3[aria-invalid='true'] {
  border-color: #CD2C23;
}

.c3:disabled,
.c3[aria-disabled='true'] {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-webkit-input-placeholder,
.c3[aria-disabled='true']::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::-moz-placeholder,
.c3[aria-disabled='true']::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled:-ms-input-placeholder,
.c3[aria-disabled='true']:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3[aria-disabled='true'],
.c3:disabled::placeholder,
.c3[aria-disabled='true']::placeholder {
  color: #B7BBC2;
}

.c3 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
  class="c0"
  data-testid="field-container"
>
  <label
    class="c1 c2"
    data-testid="field-label"
    for="uuid1"
    id="uuid1_label"
  >
    Telephone
  </label>
  <input
    aria-disabled="false"
    aria-invalid="false"
    aria-labelledby="uuid1_label"
    aria-required="false"
    class="c3"
    data-testid="field-input"
    id="uuid1"
    pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}"
    placeholder="Ex.: 555-123-4567"
    type="tel"
    value="foo"
  />
</div>
`;
